<resources>
    <string name="app_name">Toor Chat</string>
    <string name="loading">Пожалуйста подождите...</string>
    <string name="nav_item_qr">Сканировать QR</string>
    <string name="nav_item_main">Каталог</string>
    <string name="nav_item_settings">Настройки</string>
    <string name="nav_item_about">О приложении</string>
    <string name="start">Начать</string>
    <string name="start_kk">Бастау</string>
    <string name="start_en">Start</string>
    <string name="catalog">Каталог</string>
    <string name="language_selection">Выбор языка</string>
    <string name="about_app">О приложении</string>
    <string name="overview">Обзор</string>
    <string name="popular">Популярное</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="text_continue">Продолжить</string>
    <string name="select_rating">Выберите оценку</string>
    <string name="socket_timeout_exception">Превышено время ожидания сервера</string>
    <string name="no_internet_connection">Нет интернет соединения</string>
    <string name="main">Главная</string>
    <string name="favourites">Избранные</string>
    <string name="add_project">Добавить проект</string>
    <string name="profile">Профиль</string>
    <string name="investors_waiting_for_you">Инвесторы ждут вас. Предлагайте свои проекты и создайте огромную компанию</string>
    <string name="enter_cabinet">Войти в кабинет</string>
    <string name="email">Email *</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="restore">Восстановить</string>
    <string name="recommendation">Рекомендация</string>
    <string name="what_looking_for">Что ищете?</string>
    <string name="reset_password">У вас есть аккаунт?</string>
    <string name="reset_login">Войти в кабинет</string>
    <string name="txt_reset_password">Сброс пароля</string>
    <string name="send_email">Отправить</string>
    <string name="receive_code">Вам не пришел код?</string>
    <string name="send_pin_again">Отправить заново</string>
    <string name="write_pincode">Введите 6 значный код</string>
    <string name="send_pin">Отправить</string>
    <string name="description">Описание</string>
    <string name="project_stage">Стадия проекта</string>
    <string name="pdf_presentation">Презентация PDF</string>
    <string name="contacts">Контакты</string>
    <string name="call">Позвонить</string>
    <string name="write">Написать</string>
    <string name="load_image">Загрузить изображение\n(логотип, фотография, др.)</string>
    <string name="company_name_">Название компании или бренда *</string>
    <string name="project_essence_">Суть проекта *</string>
    <string name="project_essence_in_one_sentence">Суть проекта одним предложением (60 символов)</string>
    <string name="idea_or_general_concept_">Идея или Общая концепция *</string>
    <string name="project_stage_">Стадия проекта *</string>
    <string name="industry">Отрасль</string>
    <string name="department_">Отрасль *</string>
    <string name="leadership_location_">Местонахождение руководства *</string>
    <string name="presentation_">Презентация *</string>
    <string name="load_pdf">Загрузить PDF</string>
    <string name="site_address">Адрес сайта</string>
    <string name="investment_amount">Сумма инвестиций *</string>
    <string name="publish">Опубликовать</string>
    <string name="edit">Редактировать</string>
    <string name="my_projects">Мои проекты</string>
    <string name="become_investor">Стать инвестором</string>
    <string name="change_password">Сбросить пароль</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="pick_password">Введите новый пароль</string>
    <string name="pick_email">Введите email</string>
    <string name="have_account">Есть аккаунт?</string>
    <string name="target_investment_">Во что Вы бы хотели инвестировать? *</string>
    <string name="short_description_100_">Краткое описание (до 100 символов) *</string>
    <string name="comment_not_required">Комментарий (не обязательно)</string>
    <string name="economy_branch_you_interested">Какая отрасль экономики Вас интересует?</string>
    <string name="where_should_project_management_located_">Где должно находиться руководство проекта? *</string>
    <string name="projects_stage_you_looking">Проекты на какой стадии Вы ищете?</string>
    <string name="where_should_business_located">Где должно находиться предприятие?</string>
    <string name="how_much_you_planning_invest">Какую сумму в ₸ (KZT) Вы планируете инвестировать?</string>
    <string name="where_should_products_marketed">Где должны реализовываться продукты или услуги?</string>
    <string name="investment_interes_creation">Создание инвестиционного интереса</string>
    <string name="messages">Чаты</string>
    <string name="add_advert">Добавить объявление</string>
    <string name="cars">Машины</string>
    <string name="spares">Запчасти</string>
    <string name="repairs">Ремонт</string>
    <string name="services">Услуги</string>
    <string name="shops">Магазины</string>
    <string name="avtorazbor">Авторазборы</string>
    <string name="car_showrooms">Автосалоны</string>
    <string name="news">Новости</string>
    <string name="city">Город</string>
    <string name="body">Кузов</string>
    <string name="engine_volume">Объем двигателя</string>
    <string name="car_color">Цвет автомобиля</string>
    <string name="mileage">Пробег</string>
    <string name="transmission">Коробка передач</string>
    <string name="steering_wheel">Руль</string>
    <string name="drive_unit">Привод</string>
    <string name="customs_cleared">Растаможен</string>
    <string name="condition">Состояние</string>
    <string name="add_comment_">Добавьте комментарий...</string>
    <string name="adverts">Объявления</string>
    <string name="autos">Автомобили</string>
    <string name="auto_parts">Автозапчасти</string>
    <string name="tires">Шины</string>
    <string name="discs">Диски</string>
    <string name="consumables">Расходники</string>
    <string name="accessories">Аксессуары</string>
    <string name="multimedia">Мультимедиа</string>
    <string name="car_repair">Авторемонт</string>
    <string name="auto_services">Автоуслуги</string>
    <string name="grow_your_business_avtorynok_kz">Развивайте свой бизнес в avtorynok.kz</string>
    <string name="open_your_autoparts_store">Откройте свой магазин автозапчастей, авторазбор или автосалон в avtorynok.kz. Аккаунты компаний предлагают целый год инструментов и функций, позволяющих охватить больше людей, общаться с ними и увеличивать продажи.</string>
    <string name="register_autoparts_store">Зарегистрировать магазин запчастей</string>
    <string name="register_avtorazbor">Зарегистрировать авторазбор</string>
    <string name="register_car_showroom">Зарегистрировать магазин автосалон</string>
    <string name="notifications">Уведомления</string>
    <string name="sign_in">Войти</string>
    <string name="enter_username">Введите имя пользователя</string>
    <string name="enter">Войти</string>
    <string name="have_not_account_yet_">У вас еще нет аккаунта?</string>
    <string name="create_new_account">Создать новый аккаунт</string>
    <string name="i_accept_user_agreement">Авторизуясь на сайте, я принимаю условия пользовательского соглашения и даю согласие на обработку персональных данных.</string>
    <string name="sign_up_i_accept_user_agreement">Регистрируясь, я принимаю условия пользовательского соглашения и даю согласие на обработку персональных данных.</string>
    <string name="c_avtorynok_kz">© Avtorynok.kz</string>
    <string name="select_by_params">Подобрать по параметрам</string>
    <string name="car_search">Поиск автомобиля</string>
    <string name="show_x_adverts">Показать %1$d объявлений</string>
    <string name="brand">Марка</string>
    <string name="car_body">Кузов</string>
    <string name="production_year">Год выпуска</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="username">Имя пользователя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="additional">Дополнительно</string>
    <string name="information">Информация</string>
    <string name="about_us">О нас</string>
    <string name="send_review">Отправить отзыв</string>
    <string name="help_center">Справочный центр</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="rules_for_publishing_adverts">Правила публикации объявлений</string>
    <string name="your_balance">Ваш баланс</string>
    <string name="fill_up_wallet">Пополнить счет</string>
    <string name="account_statement">Выписка по счету</string>
    <string name="settings">Настройки</string>
    <string name="kpp">КПП</string>
    <string name="engine_type">Тип двигателя</string>
    <string name="state">Состояние</string>
    <string name="front_wheel">передний</string>
    <string name="four_wheel">полный</string>
    <string name="rear_wheel">задний</string>
    <string name="wheel_left">слева</string>
    <string name="wheel_right">справа</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="account_info">Информация об аккаунте</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="log_out">Выйти</string>
    <string name="notification_settings">Настройки уведомлений</string>
    <string name="blocked_users">Заблокированные пользователи</string>
    <string name="temporarily_block_account">Временно заблокировать аккаунт</string>
    <string name="reset">Сбросить</string>
    <string name="info_will_not_appear">Информация об аккаунте не будут показываться в вашем общедоступном профиле.</string>
    <string name="change_profile_photo">Сменить фото профиля</string>
    <string name="enter_your_name">Введите свое имя</string>
    <string name="enter_your_surname">Введите свою фамилию</string>
    <string name="email_address">Эл. адрес</string>
    <string name="enter_email_address">Введите адрес электронной почты</string>
    <string name="about_me">О себе</string>
    <string name="max_length_300">Максимальная длина текста 300 знаков</string>
    <string name="save">Сохранить</string>
    <string name="edit_phone_number">Изменить номер телефона</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="dont_use_simple_password">Не используйте простые пароли, которые слишком легко сломать. Постарайтесь создать максимально сложный пароль.</string>
    <string name="enter_current_password_6_char">Введите текущий пароль минимум из 6 знаков</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="enter_new_password_6_char">Создайте новый пароль минимум из 6 знаков</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="edit_password">Сменить пароль</string>
    <string name="get_missed_notifications">Получайте пропущенные уведомления</string>
    <string name="display_notifications">Отображать уведомления</string>
    <string name="display_liked">Отметок "Нравится"</string>
    <string name="comments">Комментарии</string>
    <string name="phone_or_email">Имя пользователя</string>
    <string name="feed">Лента</string>
    <string name="message">Чат</string>
    <string name="comment">Комментарий</string>
    <string name="whats_new_">Что нового?</string>
    <string name="detail_post">Объявления</string>
    <string name="fragment_profile_info">Профиль</string>
    <string name="i_agree_confidentiality">я согласен с <u> Политикой конфиденциальности</u></string>
</resources>