<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="kz.diaspora.app.ui.sign_in.SignInViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:src="@drawable/ic_logo_white" />

            <EditText
                android:id="@+id/et_login"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/phone_or_email"
                android:padding="12dp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                android:padding="12dp"
                android:password="true" />

            <Button
                android:id="@+id/btn_enter"
                style="@style/ButtonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:padding="12dp"
                android:text="@string/enter" />

            <Button
                android:id="@+id/btn_forgot_password"
                style="@style/ButtonTextSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0.7"
                android:text="@string/have_not_account_yet_"
                android:textColor="@color/white" />

            <View
                android:id="@+id/v_line_left"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:background="@color/color_E1D9D9" />

            <View
                android:id="@+id/v_line_right"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/color_E1D9D9" />

            <Button
                android:id="@+id/btn_create_account"
                style="@style/ButtonWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_up"/>


        </LinearLayout>
    </ScrollView>

</layout>
