<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="kz.diaspora.app.ui.sign_up.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:src="@drawable/ic_logo_white" />

            <EditText
                android:id="@+id/et_login"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_edittext"
                android:hint="Номер телефона или адрес почты"
                android:padding="12dp" />

            <EditText
                android:id="@+id/et_name_surname"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/surname"
                android:padding="12dp" />

            <EditText
                android:id="@+id/et_name_name"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                android:padding="12dp" />

            <EditText
                android:id="@+id/et_username"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="Логин"
                android:padding="12dp" />

            <EditText
                android:id="@+id/et_password"
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                android:padding="12dp"
                android:password="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <CheckBox
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/txt_i_agree_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:textColor="@color/white"
                    android:text="@string/i_agree_confidentiality"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/ButtonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:padding="12dp"
                android:text="@string/registration" />


            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0.7"
                android:text="@string/reset_password"
                android:textColor="@color/white" />

            <View
                android:id="@+id/v_line_left"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:background="@color/color_E1D9D9" />

            <View
                android:id="@+id/v_line_right"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/color_E1D9D9" />

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/ButtonTextSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/sign_in" />


        </LinearLayout>
    </ScrollView>

</layout>
